Overview of changes in Gtk3 0.019 [2014-11-25]
==============================================

* Fix test failures with gdk-pixbuf >= 2.31.2
* Fix test failures with gtk+ 3.0

Overview of changes in Gtk3 0.018 [2014-09-30]
==============================================

* dist.ini: added x_IRC metadata tag
* Attempt to reduce false negatives from CPAN testers
* overrides.t: output current object being tested using note()

Overview of changes in Gtk3 0.017 [2014-07-02]
==============================================

* Fix compatibility with perl 5.20 and non-dot locales.
* Fix a test failure due to changes in gtk+ (GtkRecentChooser)

Overview of changes in Gtk3 0.016 [2014-02-19]
==============================================

* README: added more project contact info/addresses/links
* README: Added more info on how to report bugs, submit patches
∗ dist.ini: added Twitter URL to MetaResources block

Overview of changes in Gtk3 0.015 [2013-12-08]
==============================================

* Add overrides for Gtk3::RadioAction, Gtk3::RadioButton, Gtk3::RadioMenuItem
  and Gtk3::RadioToolButton.
* Add an override for Gtk3::SizeGroup::get_widgets.
* Add an override for Gtk3::Widget::render_icon.
* Add an override for Pango::Layout::set_text.
* Require Test::Simple >= 0.96.

Overview of changes in Gtk3 0.014 [2013-10-18]
==============================================

* dist.ini: document 'is_trial', sets 'testing' in metadata
* dist.ini: Add MetaJSON, set MetaYAML version = 2
* dist.ini: Add [MetaResources] block with correct URLs; fixes RT#89118

Overview of changes in Gtk3 0.013 [2013-09-30]
==============================================

* Add forgotten release notes.
* Reenable UploadToCPAN Dist::Zilla plugin

Overview of changes in Gtk3 0.012 [2013-09-30]
==============================================

* Add overrides for Gtk3::Image.
∗ Fix partial misquoting in croak usage
* Do not use 'defined' on an array (Spotted by Thierry Vignaud)