@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::Manifest v5.009.
+# This file was automatically generated by Dist::Zilla::Plugin::Manifest v5.025.
 LICENSE
 MANIFEST
 META.json
