@@ -4,7 +4,7 @@
       "Torsten Schoenfeld <kaffeetisch@gmx.de>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.009, CPAN::Meta::Converter version 2.133380",
+   "generated_by" : "Dist::Zilla version 5.025, CPAN::Meta::Converter version 2.143240",
    "license" : [
       "lgpl_2_1"
    ],
@@ -16,7 +16,7 @@
    "prereqs" : {
       "configure" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : "6.30"
+            "ExtUtils::MakeMaker" : "0"
          }
       },
       "runtime" : {
@@ -44,6 +44,6 @@
       "x_IRC" : "irc://irc.gimp.org/#gtk-perl",
       "x_twitter" : "https://twitter.com/GTKPerl"
    },
-   "version" : "0.019"
+   "version" : "0.020"
 }
 
