@@ -1,20 +1,19 @@
 
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.009.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.025.
 use strict;
 use warnings;
 
 
 
-use ExtUtils::MakeMaker 6.30;
+use ExtUtils::MakeMaker;
 
 
 
 my %WriteMakefileArgs = (
   "ABSTRACT" => "Perl interface to the 3.x series of the gtk+ toolkit",
   "AUTHOR" => "Torsten Schoenfeld <kaffeetisch\@gmx.de>",
-  "BUILD_REQUIRES" => {},
   "CONFIGURE_REQUIRES" => {
-    "ExtUtils::MakeMaker" => "6.30"
+    "ExtUtils::MakeMaker" => 0
   },
   "DISTNAME" => "Gtk3",
   "EXE_FILES" => [],
@@ -27,8 +26,7 @@ my %WriteMakefileArgs = (
     "Glib::Object::Introspection" => "0.016",
     "Test::Simple" => "0.96"
   },
-  "TEST_REQUIRES" => {},
-  "VERSION" => "0.019",
+  "VERSION" => "0.020",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -39,6 +37,7 @@ my %FallbackPrereqs = (
   "Cairo::GObject" => "1.000",
   "Carp" => 0,
   "Exporter" => 0,
+  "ExtUtils::MakeMaker" => 0,
   "Glib::Object::Introspection" => "0.016",
   "Test::Simple" => "0.96"
 );
